First iteration test

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -33,14 +33,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"say hello to somebody\"\n",
+    "    return (f'Hello {to}!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this to say hello to anyone."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Nikola!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(say_hello(\"Nikola\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NumbaDev",
    "language": "python",
-   "name": "python3"
+   "name": "numba"
   }
  },
  "nbformat": 4,
