--- a/index.ipynb
+++ b/index.ipynb
@@ -7,23 +7,23 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from numbasom.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# NumbaSOM\n",
     "\n",
-    "> Summary description here."
+    "> A Fast Self-Organizing Map Python Library Implemented in Numba."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "If you need a **fast and simple to use** SOM library implemented as a 2D lattice or torus, check this out. It utilizes online rather than batch training. "
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install numbasom`"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Nikola!'"
       ]
      },
      "execution_count": null,
@@ -71,22 +71,15 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Nikola\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NumbaDev",
    "language": "python",
-   "name": "python3"
+   "name": "numba"
   }
  },
  "nbformat": 4,
