next iteration testing

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# numbasom\n",
     "\n",
     "> API details."
    ]
@@ -25,7 +25,12 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from numba import jit\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import collections\n",
+    "from timeit import default_timer as timer"
    ]
   },
   {
@@ -35,9 +40,14 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def say_hello(to):\n",
-    "    \"say hello to somebody\"\n",
-    "    return (f'Hello {to}!')"
+    "class NumbaSOM:\n",
+    "    \"\"\"Instantiates the class with data\"\"\"\n",
+    "    def __init__(self, som_size, num_iterations, data, is_torus=False, isScaled=False):\n",
+    "        print (\"hello\")\n",
+    "        \n",
+    "    def say_hello(self, to):\n",
+    "        \"say hello to somebody\"\n",
+    "        return (f'Hello {to}!')"
    ]
   },
   {
@@ -45,6 +55,22 @@
    "metadata": {},
    "source": [
     "We can use this to say hello to anyone."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.random.randn(100,3)"
    ]
   },
   {
@@ -56,19 +82,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Nikola!\n"
+      "hello\n"
      ]
     }
    ],
    "source": [
-    "print(say_hello(\"Nikola\"))"
+    "som = NumbaSOM((20,20),1000,data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test"
+    "### To display class methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"NumbaSOM.say_hello\" class=\"doc_header\"><code>NumbaSOM.say_hello</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>NumbaSOM.say_hello</code>(**`to`**)\n",
+       "\n",
+       "say hello to somebody"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(NumbaSOM.say_hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Nikola!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "som.say_hello(\"Nikola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "from nbdev.export import notebook2script; notebook2script()"
    ]
   }
  ],
