--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -26,6 +26,18 @@
    "source": [
     "#hide\n",
     "from nbdev.showdoc import *\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "from numbasom.viz import *\n",
     "from numba import jit\n",
     "import numpy as np\n",
     "import math\n",
@@ -42,59 +54,29 @@
     "#export\n",
     "class NumbaSOM:\n",
     "    \"\"\"Instantiates the class with data\"\"\"\n",
-    "    def __init__(self, som_size, num_iterations, data, is_torus=False, isScaled=False):\n",
-    "        print (\"hello\")\n",
+    "    def __init__(self, som_size, is_torus=False):\n",
+    "        self.som_size=som_size\n",
+    "        self.is_torus=is_torus    \n",
     "        \n",
-    "    def say_hello(self, to):\n",
-    "        \"say hello to somebody\"\n",
-    "        return (f'Hello {to}!')"
+    "    def train(self, data, num_iterations, is_scaled=False):\n",
+    "        data_scaled = data\n",
+    "        if not is_scaled:\n",
+    "            start = timer()\n",
+    "            data_scaled = normalize(data)\n",
+    "            end = timer()\n",
+    "            print(\"Data scaling took: %f seconds.\" %(end - start))\n",
+    "        start = timer()\n",
+    "        lattice = som_calc(self.som_size, num_iterations, data_scaled, self.is_torus)\n",
+    "        end = timer()\n",
+    "        print(\"SOM training took: %f seconds.\" %(end - start))  \n",
+    "        return lattice"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this to say hello to anyone."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.random.randn(100,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "som = NumbaSOM((20,20),1000,data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### To display class methods"
+    "## Class Methods"
    ]
   },
   {
@@ -105,11 +87,10 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NumbaSOM.say_hello\" class=\"doc_header\"><code>NumbaSOM.say_hello</code><a href=\"__main__.py#L7\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NumbaSOM.train\" class=\"doc_header\"><code>NumbaSOM.train</code><a href=\"__main__.py#L8\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>NumbaSOM.say_hello</code>(**`to`**)\n",
-       "\n",
-       "say hello to somebody"
+       "> <code>NumbaSOM.train</code>(**`data`**, **`num_iterations`**, **`is_scaled`**=*`False`*)\n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -120,27 +101,14 @@
     }
    ],
    "source": [
-    "show_doc(NumbaSOM.say_hello)"
+    "show_doc(NumbaSOM.train)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello Nikola!'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "som.say_hello(\"Nikola\")"
+    "## Module Methods"
    ]
   },
   {
@@ -149,8 +117,452 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
-    "from nbdev.export import notebook2script; notebook2script()"
+    "#export\n",
+    "@jit(nopython=True)\n",
+    "def normalize(data, min_val=0, max_val=1):\n",
+    "    no_vectors, dim = data.shape\n",
+    "    D = np.empty((no_vectors,dim), dtype=np.float64)\n",
+    "    inf = 1.7976931348623157e+308\n",
+    "    min_arr = np.empty(dim, dtype=np.float64)\n",
+    "    min_arr[:] = inf\n",
+    "    max_arr = np.empty(dim, dtype=np.float64)\n",
+    "    max_arr[:] = -inf\n",
+    "    diff = np.empty(dim, dtype=np.float64)\n",
+    "\n",
+    "    for vec in range(no_vectors):\n",
+    "        for d in range(dim):\n",
+    "            val = data[vec,d]\n",
+    "            if val < min_arr[d]:\n",
+    "                min_arr[d] = val\n",
+    "            if val > max_arr[d]:\n",
+    "                max_arr[d] = val\n",
+    "\n",
+    "    for d in range(dim):\n",
+    "        diff[d] = max_arr[d] - min_arr[d]\n",
+    "   \n",
+    "    for i in range(no_vectors):\n",
+    "        for j in range(dim):\n",
+    "            if diff[j] != 0:\n",
+    "                D[i,j] = (data[i, j] - min_arr[j]) / diff[j]\n",
+    "            else:\n",
+    "                D[i,j] = 0\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def normalize_with_mutate(data, min_val=0, max_val=1):\n",
+    "    no_vectors, dim = data.shape\n",
+    "    #D = np.empty((no_vectors,dim), dtype=np.float64)\n",
+    "    inf = 1.7976931348623157e+308\n",
+    "    min_arr = np.empty(dim, dtype=np.float64)\n",
+    "    min_arr[:] = inf\n",
+    "    max_arr = np.empty(dim, dtype=np.float64)\n",
+    "    max_arr[:] = -inf\n",
+    "    diff = np.empty(dim, dtype=np.float64)\n",
+    "\n",
+    "    for vec in range(no_vectors):\n",
+    "        for d in range(dim):\n",
+    "            val = data[vec,d]\n",
+    "            if val < min_arr[d]:\n",
+    "                min_arr[d] = val\n",
+    "            if val > max_arr[d]:\n",
+    "                max_arr[d] = val\n",
+    "\n",
+    "    for d in range(dim):\n",
+    "        diff[d] = max_arr[d] - min_arr[d]\n",
+    "   \n",
+    "    for i in range(no_vectors):\n",
+    "        for j in range(dim):\n",
+    "            data[i,j] = (data[i, j] - min_arr[j]) / diff[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "def pairwise(X):\n",
+    "    M = X.shape[0]\n",
+    "    N = X.shape[1]\n",
+    "    D = np.empty((M, M), dtype=np.float64)\n",
+    "    for i in range(M):\n",
+    "        for j in range(M):\n",
+    "            d = 0.0\n",
+    "            for k in range(N):\n",
+    "                tmp = X[i, k] - X[j, k]\n",
+    "                d += tmp * tmp\n",
+    "            D[i, j] = np.sqrt(d)\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "def pairwise_squared(X):\n",
+    "    M = X.shape[0]\n",
+    "    N = X.shape[1]\n",
+    "    # type will depend on the size of the matrix\n",
+    "    D = np.empty((M, M), dtype=np.uint32)\n",
+    "    for i in range(M):\n",
+    "        for j in range(M):\n",
+    "            d = 0.0\n",
+    "            for k in range(N):\n",
+    "                tmp = X[i, k] - X[j, k]\n",
+    "                d += tmp * tmp\n",
+    "            D[i, j] = d\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def random_lattice(som_size, dimensionality):\n",
+    "    X, Y, Z = som_size[0], som_size[1], dimensionality\n",
+    "    D = np.empty((X,Y,Z), dtype=np.float64)\n",
+    "    for x in range(X):\n",
+    "        for y in range(Y):\n",
+    "            for z in range(Z):\n",
+    "                D[x,y,z] = np.random.random()\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit\n",
+    "def get_all_BMU_indexes(BMU, X, Y):\n",
+    "    BMUx, BMUy = BMU[0], BMU[1]\n",
+    "    BMU2x, BMU3x, BMU4x = BMU[0], BMU[0], BMU[0]\n",
+    "    BMU2y, BMU3y, BMU4y = BMU[1], BMU[1], BMU[1]\n",
+    "    \n",
+    "    if BMUx > X / 2:\n",
+    "        BMU2x = BMUx - X\n",
+    "    else:\n",
+    "        BMU2x = BMUx + X\n",
+    "    if BMUy > Y / 2:\n",
+    "        BMU3y = BMUy - Y\n",
+    "    else:\n",
+    "        BMU3y = BMUy + Y\n",
+    "    BMU4x = BMU2x\n",
+    "    BMU4y = BMU3y \n",
+    "    return BMU, (BMU2x, BMU2y), (BMU3x, BMU3y), (BMU4x, BMU4y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def som_calc(som_size, num_iterations, data_scaled, is_torus=False):\n",
+    "    #data_scaled = normalize(data)\n",
+    "    initial_radius = (max(som_size[0],som_size[1])/2)**2\n",
+    "    time_constant = num_iterations/math.log(initial_radius)\n",
+    "    start_lrate = 0.1\n",
+    "    lattice = random_lattice(som_size, data_scaled.shape[1])\n",
+    "    datalen = len(data_scaled)\n",
+    "    X, Y, Z = lattice.shape\n",
+    "\n",
+    "    for current_iteration in range(num_iterations):\n",
+    "        current_radius = initial_radius * math.exp(-current_iteration/time_constant)\n",
+    "        current_lrate = start_lrate * math.exp(-current_iteration/num_iterations)\n",
+    "        rand_input = np.random.randint(datalen)\n",
+    "        rand_vector = data_scaled[rand_input]\n",
+    "\n",
+    "        BMU_dist = 1.7976931348623157e+308\n",
+    "        BMU = (0,0)\n",
+    "\n",
+    "        for x in range(X):\n",
+    "            for y in range(Y):\n",
+    "                d = 0.0\n",
+    "                for z in range(Z):\n",
+    "                    val = lattice[x,y,z]-rand_vector[z]\n",
+    "                    valsqr = val * val\n",
+    "                    d += valsqr\n",
+    "\n",
+    "                if d < BMU_dist:\n",
+    "                    BMU_dist = d\n",
+    "                    BMU = (x,y)\n",
+    "        \n",
+    "        if is_torus:\n",
+    "            BMUs = get_all_BMU_indexes(BMU, X, Y)\n",
+    "            \n",
+    "            for BMU in BMUs:\n",
+    "                adapt(lattice, rand_vector, BMU, current_radius, current_lrate)\n",
+    "\n",
+    "        else:\n",
+    "            adapt(lattice, rand_vector, BMU, current_radius, current_lrate)\n",
+    "\n",
+    "    return lattice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def adapt(lattice, rand_vector, BMU, current_radius, current_lrate):\n",
+    "    X, Y, Z = lattice.shape\n",
+    "    for x in range(X):\n",
+    "        for y in range(Y):\n",
+    "            a = x-BMU[0]\n",
+    "            b = y-BMU[1]\n",
+    "            d = a*a + b*b\n",
+    "            if d < current_radius:\n",
+    "                up = d * d\n",
+    "                down = current_radius * current_radius\n",
+    "                res = -up / (2 * down)\n",
+    "                influence = math.exp(res)\n",
+    "                for z in range(Z):\n",
+    "                    diff = (rand_vector[z] - lattice[x,y,z]) * influence * current_lrate\n",
+    "                    lattice[x,y,z] += diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def euclidean(vec1, vec2):\n",
+    "    L = vec1.shape[0]\n",
+    "    dist = 0\n",
+    "    for l in range(L):\n",
+    "        val = vec2[l] - vec1[l]\n",
+    "        valsqr = val * val\n",
+    "        dist += valsqr\n",
+    "    return math.sqrt(dist)\n",
+    "\n",
+    "@jit(nopython=True)\n",
+    "def euclidean_squared(vec1, vec2):\n",
+    "    L = vec1.shape[0]\n",
+    "    dist = 0\n",
+    "    for l in range(L):\n",
+    "        val = vec2[l] - vec1[l]\n",
+    "        valsqr = val * val\n",
+    "        dist += valsqr\n",
+    "    return dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "@jit(nopython=True)\n",
+    "def u_matrix(lattice):\n",
+    "    X, Y, Z = lattice.shape\n",
+    "    u_values = np.empty((X,Y), dtype=np.float64)\n",
+    "    \n",
+    "    for y in range(Y):\n",
+    "        for x in range(X):\n",
+    "            current = lattice[x,y]\n",
+    "            dist = 0\n",
+    "            num_neigh = 0\n",
+    "            # left\n",
+    "            if x-1 >= 0:\n",
+    "                #middle\n",
+    "                vec = lattice[x-1,y]\n",
+    "                dist += euclidean(current, vec)\n",
+    "                num_neigh += 1\n",
+    "                if y - 1 >= 0:\n",
+    "                    #sup\n",
+    "                    vec = lattice[x-1, y-1]\n",
+    "                    dist += euclidean(current, vec)\n",
+    "                    num_neigh += 1\n",
+    "                if y + 1 < Y:\n",
+    "                    # down\n",
+    "                    vec = lattice[x-1,y+1]\n",
+    "                    dist += euclidean(current, vec)\n",
+    "                    num_neigh += 1\n",
+    "            # middle        \n",
+    "            if y - 1 >= 0:\n",
+    "                # up\n",
+    "                vec = lattice[x,y-1]\n",
+    "                dist += euclidean(current, vec)\n",
+    "                num_neigh += 1\n",
+    "            # down\n",
+    "            if y + 1 < Y:\n",
+    "                vec = lattice[x,y+1]\n",
+    "                dist += euclidean(current, vec)\n",
+    "                num_neigh += 1\n",
+    "            # right\n",
+    "            if x + 1 < X:\n",
+    "                # middle\n",
+    "                vec = lattice[x+1,y]\n",
+    "                dist += euclidean(current, vec)\n",
+    "                num_neigh += 1\n",
+    "                if y - 1 >= 0:\n",
+    "                    #up\n",
+    "                    vec = lattice[x+1,y-1]\n",
+    "                    dist += euclidean(current, vec)\n",
+    "                    num_neigh += 1\n",
+    "                if y + 1 < lattice.shape[1]:\n",
+    "                    # down\n",
+    "                    vec = lattice[x+1,y+1]\n",
+    "                    dist += euclidean(current, vec)\n",
+    "                    num_neigh += 1       \n",
+    "            u_values[x,y] = dist / num_neigh\n",
+    "    return u_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def project_on_som(data, lattice, additional_list=None, data_scaled=False):\n",
+    "    start = timer()\n",
+    "    if data_scaled:\n",
+    "        data_scaled = data\n",
+    "    else:\n",
+    "        data_scaled = normalize(data)\n",
+    "    \n",
+    "    #create all keys\n",
+    "    projected = collections.defaultdict(list)\n",
+    "    X, Y, Z = lattice.shape\n",
+    "    for x in range(X):\n",
+    "        for y in range(Y):\n",
+    "            projected[(x,y)]\n",
+    "    # fill keys\n",
+    "    for index, vec in enumerate(data_scaled):\n",
+    "        winning_cell, wi = find_closest(index, vec, lattice)\n",
+    "        projected[winning_cell].append(wi)\n",
+    "    if additional_list:\n",
+    "        final = {key: [additional_list[v] for v in value] for key, value in projected.items()}\n",
+    "    else:\n",
+    "        final = {key: [data[v] for v in value] for key, value in projected.items()}\n",
+    "    end = timer()\n",
+    "    print(\"Projecting on SOM took: %f seconds.\" %(end - start))  \n",
+    "    return final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def find_closest_data_index(lattice_vec, data):\n",
+    "    min_val = 1.7976931348623157e+308\n",
+    "    winning_index = -1\n",
+    "    data_len = len(data)\n",
+    "    for i in range(data_len):\n",
+    "        data_point = data[i]\n",
+    "        dist = euclidean_squared(lattice_vec,data_point)\n",
+    "        if dist < min_val:\n",
+    "            min_val = dist\n",
+    "            winning_index = i\n",
+    "    return winning_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def lattice_closest_vectors(data, lattice, additional_list=None, data_scaled=False):\n",
+    "    start = timer()\n",
+    "    if data_scaled:\n",
+    "        data_scaled = data\n",
+    "    else:\n",
+    "        data_scaled = normalize(data)\n",
+    "    \n",
+    "    X, Y, Z = lattice.shape\n",
+    "\n",
+    "    # create dictionary\n",
+    "    projected = {}\n",
+    "    \n",
+    "    # fill keys\n",
+    "    for x in range(X):\n",
+    "        for y in range(Y):\n",
+    "            lattice_vec = lattice[x,y]\n",
+    "            winning_index = find_closest_data_index(lattice_vec, data_scaled)\n",
+    "            if additional_list:\n",
+    "                projected[(x,y)] = [additional_list[winning_index]]\n",
+    "            else:\n",
+    "                projected[(x,y)] = data[winning_index]\n",
+    "\n",
+    "    end = timer()\n",
+    "    print(\"Finding closest data points took: %f seconds.\" %(end - start)) \n",
+    "    return projected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def find_closest(index, vec, lattice):\n",
+    "    X, Y, Z = lattice.shape\n",
+    "    min_val = 1.7976931348623157e+308\n",
+    "    win_index = -1\n",
+    "    win_cell = (-1,-1)\n",
+    "    for x in range(X):\n",
+    "        for y in range(Y):\n",
+    "            dist = euclidean_squared(vec, lattice[x,y])\n",
+    "            if dist < min_val:\n",
+    "                min_val = dist\n",
+    "                win_index = index\n",
+    "                win_cell = (x,y)\n",
+    "    return win_cell, win_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def save_lattice(lattice, filename):\n",
+    "    np.save(filename, lattice)\n",
+    "    print (\"SOM lattice saved at %s\" %filename)\n",
+    "\n",
+    "def load_lattice(filename):\n",
+    "    lattice = np.load(filename)\n",
+    "    print (\"SOM lattice loaded from %s\" %filename)\t\n",
+    "    return lattice"
    ]
   }
  ],
