fixed small errors

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "class NumbaSOM:\n",
+    "class SOM:\n",
     "    \"\"\"Instantiates the class with data\"\"\"\n",
     "    def __init__(self, som_size, is_torus=False):\n",
     "        self.som_size=som_size\n",
@@ -87,9 +87,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NumbaSOM.train\" class=\"doc_header\"><code>NumbaSOM.train</code><a href=\"__main__.py#L8\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"SOM.train\" class=\"doc_header\"><code>SOM.train</code><a href=\"__main__.py#L8\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>NumbaSOM.train</code>(**`data`**, **`num_iterations`**, **`is_scaled`**=*`False`*)\n",
+       "> <code>SOM.train</code>(**`data`**, **`num_iterations`**, **`is_scaled`**=*`False`*)\n",
        "\n"
       ],
       "text/plain": [
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "show_doc(NumbaSOM.train)"
+    "show_doc(SOM.train)"
    ]
   },
   {
