Documented the class and a number of methods

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -53,12 +53,65 @@
    "source": [
     "#export\n",
     "class SOM:\n",
-    "    \"\"\"Instantiates the class with data\"\"\"\n",
+    "    \"\"\"\n",
+    "    A class representing the SOM \n",
+    "\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    says_str : str\n",
+    "        a formatted string to print out what the animal says\n",
+    "    name : str\n",
+    "        the name of the animal\n",
+    "    sound : str\n",
+    "        the sound that the animal makes\n",
+    "    num_legs : int\n",
+    "        the number of legs the animal has (default 4)\n",
+    "\n",
+    "    Methods\n",
+    "    -------\n",
+    "    train(data, num_iterations, is_scaled=True)\n",
+    "        Trains the algorithm \n",
+    "    \"\"\"\n",
     "    def __init__(self, som_size, is_torus=False):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        som_size : tuple\n",
+    "            The size of the lattice, i.e. (20,30) for 20 rows and 30 columns \n",
+    "        is_torus : boolean\n",
+    "            is_torus=True, changes the topology to a torus\n",
+    "        \"\"\"\n",
     "        self.som_size=som_size\n",
-    "        self.is_torus=is_torus    \n",
+    "        self.is_torus=is_torus\n",
     "        \n",
-    "    def train(self, data, num_iterations, is_scaled=False):\n",
+    "    def train(self, data, num_iterations, is_scaled=True):\n",
+    "        \"\"\"Trains the algorithm and returns the lattice.\n",
+    "\n",
+    "        If the argument `is_scaled` isn't passed in, there will be no scaling of the input data.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        data : numpy array\n",
+    "        \n",
+    "            The input data tensor of the shape NxD, where:\n",
+    "            N - instances axis\n",
+    "            D - features axis\n",
+    "            \n",
+    "        num_iterations : int\n",
+    "        \n",
+    "            The number of iterations the algorithm will run. \n",
+    "            \n",
+    "        is_scaled : boolean, optional\n",
+    "        \n",
+    "            I True, the data will be scaled\n",
+    "\n",
+    "        Returns\n",
+    "        ------\n",
+    "        The lattice of the shape (R,C,D):\n",
+    "        R - number of rows\n",
+    "        C - number of columns\n",
+    "        D - features axis\n",
+    "        \"\"\"\n",
     "        data_scaled = data\n",
     "        if not is_scaled:\n",
     "            start = timer()\n",
@@ -76,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class Methods"
+    "### class Methods"
    ]
   },
   {
@@ -87,10 +140,36 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"SOM.train\" class=\"doc_header\"><code>SOM.train</code><a href=\"__main__.py#L8\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"SOM.train\" class=\"doc_header\"><code>SOM.train</code><a href=\"__main__.py#L34\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>SOM.train</code>(**`data`**, **`num_iterations`**, **`is_scaled`**=*`False`*)\n",
-       "\n"
+       "> <code>SOM.train</code>(**`data`**, **`num_iterations`**, **`is_scaled`**=*`True`*)\n",
+       "\n",
+       "Trains the algorithm and returns the lattice.\n",
+       "\n",
+       "If the argument `is_scaled` isn't passed in, there will be no scaling of the input data.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "data : numpy array\n",
+       "\n",
+       "    The input data tensor of the shape NxD, where:\n",
+       "    N - instances axis\n",
+       "    D - features axis\n",
+       "    \n",
+       "num_iterations : int\n",
+       "\n",
+       "    The number of iterations the algorithm will run. \n",
+       "    \n",
+       "is_scaled : boolean, optional\n",
+       "\n",
+       "    I True, the data will be scaled\n",
+       "\n",
+       "Returns\n",
+       "------\n",
+       "The lattice of the shape (R,C,D):\n",
+       "R - number of rows\n",
+       "C - number of columns\n",
+       "D - features axis"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -108,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module Methods"
+    "### module Methods"
    ]
   },
   {
@@ -120,6 +199,31 @@
     "#export\n",
     "@jit(nopython=True)\n",
     "def normalize(data, min_val=0, max_val=1):\n",
+    "    \"\"\"Normalizes the data between `min_val` and `max_val`\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        data : numpy array\n",
+    "        \n",
+    "            The input data tensor of the shape NxD, where:\n",
+    "            N - instances axis\n",
+    "            D - features axis\n",
+    "            \n",
+    "        min_val : int, default 0\n",
+    "        \n",
+    "            Minimum\n",
+    "            \n",
+    "        max_val : int, default 1\n",
+    "        \n",
+    "            Maximum\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        The lattice of the shape (R,C,D):\n",
+    "        R - number of rows\n",
+    "        C - number of columns\n",
+    "        D - features axis\n",
+    "        \"\"\"\n",
     "    no_vectors, dim = data.shape\n",
     "    D = np.empty((no_vectors,dim), dtype=np.float64)\n",
     "    inf = 1.7976931348623157e+308\n",
@@ -158,6 +262,7 @@
     "#exporti\n",
     "@jit(nopython=True)\n",
     "def normalize_with_mutate(data, min_val=0, max_val=1):\n",
+    "\n",
     "    no_vectors, dim = data.shape\n",
     "    #D = np.empty((no_vectors,dim), dtype=np.float64)\n",
     "    inf = 1.7976931348623157e+308\n",
