--- a/01_viz.ipynb
+++ b/01_viz.ipynb
@@ -63,7 +63,7 @@
     "#export\n",
     "def plot_u_matrix(u_mat, fig_size=(4,4), colormap='viridis_r'):\n",
     "    fig, ax = plt.subplots(figsize=fig_size)\n",
-    "    ax.imshow(u_mat.T, interpolation='nearest', cmap=colormap) \n",
+    "    ax.imshow(u_mat, interpolation='nearest', cmap=colormap) \n",
     "    aspect='auto'\n",
     "    plt.show()"
    ]
