changing the ipykernel to avoid errors

--- a/01_viz.ipynb
+++ b/01_viz.ipynb
@@ -71,9 +71,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NumbaDev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "numba"
+   "name": "python3"
   }
  },
  "nbformat": 4,
