--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -673,9 +673,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NumbaDev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "numba"
+   "name": "python3"
   }
  },
  "nbformat": 4,
