--- a/01_viz.ipynb
+++ b/01_viz.ipynb
@@ -15,7 +15,7 @@
    "id": "485b57b6",
    "metadata": {},
    "source": [
-    "# vizualisation\n",
+    "# Vizualisation\n",
     "\n",
     "> API details."
    ]
@@ -62,6 +62,7 @@
    "source": [
     "#export\n",
     "def plot_u_matrix(u_mat, fig_size=(4,4), colormap='viridis_r'):\n",
+    "    \"\"\"Plots the U-matrix in matplotlib.\"\"\"\n",
     "    fig, ax = plt.subplots(figsize=fig_size)\n",
     "    ax.imshow(u_mat, interpolation='nearest', cmap=colormap) \n",
     "    aspect='auto'\n",
@@ -71,7 +72,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
